# Flux

./: .gitignore  .gitmodules  CMakeLists.txt  Flux.sln  Generate.ps1  LICENSE  README.md  generate-macOS.sh  setup.py
FluxApp/: Application.cpp  Application.h  FluxApp.cpp  FluxApp.vcxproj  FluxApp.vcxproj.filters
FluxApp/Application/: Application.cpp  Application.h  ApplicationInput.cpp  DragComponent.cpp  DragComponent.h  Node.cpp  Node.h  Socket.cpp  Socket.h
FluxApp/Audio/: AudioDevice.cpp  AudioDevice.h  MyAudioDevice.cpp  MyAudioDevice.h
FluxApp/MIDI/: MidiManager.cpp  MidiManager.h
FluxApplication/: CMakeLists.txt
FluxApplication/Include/Application/: Animation.h  Application.h  DragComponent.h  DropdownMenu.h  FilterDrawer.h  FilterGraph.h  LinkResolver.h  Node.h  Socket.h
FluxApplication/Include/Audio/: AudioDevice.h  AudioEngine.h  Engine.h  MyAudioDevice.h
FluxApplication/Include/Audio/Pipeline/: AudioBuffer.h  DefaultElements.h  FilterElement.h  Pipeline.h  PipelineElement.h
FluxApplication/Include/MIDI/: MidiManager.h
FluxApplication/Source/: FluxApplication.cpp
FluxApplication/Source/Application/: Animation.cpp  Application.cpp  ApplicationInput.cpp  DragComponent.cpp  DropdownMenu.cpp  FilterDrawer.cpp  FilterGraph.cpp  LinkResolver.cpp  Node.cpp  Socket.cpp
FluxApplication/Source/Audio/: AudioDevice.cpp  AudioEngine.cpp  Engine.cpp  MyAudioDevice.cpp
FluxApplication/Source/Audio/Pipeline/: DefaultElements.cpp  FilterElement.cpp  Pipeline.cpp  PipelineElement.cpp
FluxApplication/Source/MIDI/: MidiManager.cpp
FluxAudio/: CMakeLists.txt  FluxAudio.vcxproj  FluxAudio.vcxproj.filters
FluxAudio/Include/Flux/Audio/: AudioObject.h
FluxAudio/Include/Flux/Audio/Effects/: AudioEffect.h  MultiProcessor.h
FluxAudio/Include/Flux/Audio/Effects/Filters/: Biquad.h  Filter.h  IIRFilter.h  Resonator.h  SAResonator.h
FluxAudio/Source/Flux/Audio/: AudioObject.cpp
FluxAudio/Source/Flux/Audio/Effects/: AudioEffect.cpp  MultiProcessor.cpp
FluxAudio/Source/Flux/Audio/Effects/Filters/: Biquad.cpp  Filter.cpp  IIRFilter.cpp  Resonator.cpp  SAResonator.cpp
FluxCore/: CMakeLists.txt  FluxCore.vcxproj  FluxCore.vcxproj.filters
FluxCore/Include/Flux/Core/: Flux.h
FluxCore/Include/Flux/Core/Interfaces/: Formatter.h  Identifiable.h
FluxCore/Include/Flux/Core/Math/: Math.h
FluxCore/Include/Flux/Core/Memory/: Allocator.h  Allocator.inl  Array.h  Array.inl  Memory.h  Memory.inl  RefCounter.h  SharedPointer.h  SharedPointer.inl  String.cpp  String.h  UniquePointer.h  UniquePointer.inl  WeakPointer.h  WeakPointer.inl
FluxCore/Include/Flux/Core/Tools/: StackTrace.h
FluxCore/Include/Flux/Core/Tools/Console/: ArgumentCommandNode.h  CommandContext.h  CommandNode.h  CommandTree.h  Console.h  ConsoleTypes.h  ExecutableCommandNode.h
FluxCore/Include/Flux/Core/Utilities/: ArrayUtils.h  Random.h  Random.inl
FluxCore/Source/Flux/Core/: Flux.cpp
FluxCore/Source/Flux/Core/Interfaces/: Identifiable.cpp
FluxCore/Source/Flux/Core/Memory/: String.cpp
FluxCore/Source/Flux/Core/Tools/: StackTrace.cpp
FluxCore/Source/Flux/Core/Tools/Console/: ArgumentCommandNode.cpp  CommandContext.cpp  CommandNode.cpp  CommandTree.cpp  Console.cpp  ExecutableCommandNode.cpp
FluxUI/: CMakeLists.txt  FluxUI.vcxproj  FluxUI.vcxproj.filters
FluxUI/Include/Flux/UI/: Animation.h  Color.h  Component.h  CursorManager.h  LinearColor.h  MasterView.h  Reactive.h  UserInterface.h
FluxUI/Include/Flux/UI/Components/: Component.h  Compound.h  MasterView.h
FluxUI/Source/Flux/UI/: Animation.cpp  Component.cpp  CursorManager.cpp  MasterView.cpp  Reactive.cpp  Stack.cpp  UserInterface.cpp
FluxUI/Source/Flux/UI/Components/: Component.cpp  Compound.cpp  MasterView.cpp
Include/Flux/: Factory.h
Include/Flux/Application/: Application.h  AudioPlayerComponent.h  BodePlot.h  DragComponent.h  DropdownMenu.h  FilterComponent.h  FilterGraph.h  FilterModule.h  LinkResolver.h  Module.h  Node.h  NyquistPlot.h  OpenGLWindow.h  Oscilloscope.h  RotaryKnob.h  Slider.h  Socket.h  WaveFile.h  WaveTableComponent.h  WaveTableModule.h  Window.h
Include/Flux/Application/Window/: DXWindow.h  GLWindow.h  MetalWindow.h  OpenGLWindow.h  VKWindow.h  Window.h
Include/Flux/Audio/: ADSR.h  AudioBuffer.h  AudioEngine.h  AudioObject.h  AudioPlayer.h  AudioProcessor.h  Engine.h  WaveTable.h
Include/Flux/Audio/Effects/: AudioEffect.h  MultiProcessor.h
Include/Flux/Audio/Pipeline/: AudioBuffer.h  Pipeline.h
Include/Flux/Examples/: ColorSchemeExample.h  ColorsExample.h  HelloWorld.h  StacksExample.h
Include/Flux/MIDI/: MidiManager.h  MidiMessage.h  MidiReceiver.h
Include/Flux/UI/: Animation.h  Button.h  Color.h  Component.h  CursorManager.h  DropdownMenu.h  EdgeInsets.h  Font.h  Fonts.h  FrameInfo.h  Graphics.h  MasterView.h  Path.h  Point.h  Reactive.h  SceneComponent.h  Stack.h  Text.h  Transform.h  UserInterface.h
Include/Flux/Utility/: Range.h  Timer.h
Source/: Factory.cpp  FluxApplication.cpp
Source/Application/: Application.cpp  AudioPlayerComponent.cpp  BodePlot.cpp  DragComponent.cpp  DropdownMenu.cpp  FilterComponent.cpp  FilterGraph.cpp  FilterModule.cpp  LinkResolver.cpp  MetalWindow.mm  Node.cpp  NyquistPlot.cpp  OpenGLWindow.cpp  Oscilloscope.cpp  RotaryKnob.cpp  Slider.cpp  Socket.cpp  Text.cpp  WaveFile.cpp  WaveTableComponent.cpp  WaveTableModule.cpp  Window.cpp  WindowInput.cpp
Source/Application/Window/: DXWindow.cpp  GLWindow.cpp  MetalWindow.mm  OpenGLWindow.cpp  VKWindow.cpp  Window.cpp  WindowInput.cpp
Source/Audio/: ADSR.cpp  AudioEngine.cpp  AudioObject.cpp  AudioPlayer.cpp  Engine.cpp  WaveTable.cpp
Source/Audio/Effects/: AudioEffect.cpp  MultiProcessor.cpp
Source/Audio/Effects/Filters/: Biquad.cpp  Filter.cpp  IIRFilter.cpp  Resonator.cpp  (+1 more)
Source/Audio/Pipeline/: DefaultElements.cpp  Pipeline.cpp
Source/MIDI/: MidiManager.cpp  MidiMessage.cpp
Source/UI/: Color.cpp  Component.cpp  CursorManager.cpp  DropdownMenu.cpp  Font.cpp  Graphics.cpp  MasterView.cpp  Path.cpp  Reactive.cpp  SceneComponent.cpp  Stack.cpp  Text.cpp
Source/Utility/: Timer.cpp
(+5 files in other folders)
