project(FluxCore VERSION 0.1 LANGUAGES C CXX)

file(GLOB_RECURSE FLUXCORE_SOURCES ${CMAKE_CURRENT_LIST_DIR}/Source/*.c*)
file(GLOB_RECURSE FLUXCORE_HEADERS ${CMAKE_CURRENT_LIST_DIR}/Include/*.h*)
file(GLOB_RECURSE FLUXCORE_INLINE ${CMAKE_CURRENT_LIST_DIR}/Include/*.inl)

filterSources("${FLUXCORE_SOURCES}")
filterSources("${FLUXCORE_HEADERS}")
filterSources("${FLUXCORE_INLINE}")

add_library(FluxCore STATIC ${FLUXCORE_SOURCES} ${FLUXCORE_HEADERS} ${FLUXCORE_INLINE})
set_target_properties(FluxCore PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Build/)

set(FLUXCORE_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/Include" PARENT_SCOPE)
set(FLUXCORE_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/Include")

target_include_directories(FluxCore PUBLIC ${FLUXCORE_INCLUDE})
target_include_directories(FluxCore PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Include/Flux/Core")
